# Sequence-LLM

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_cli_manual.py  test_config_manual.py
.github/workflows/: ci.yml  tests.yml
docs/: SPEC.md  index.md  installation.md  usage.md
examples/: basic_workflow.md
src/seq_llm/: __init__.py  cli.py  config.py
src/seq_llm/core/: __init__.py  api_client.py  command_builder.py  server_manager.py
src/seq_llm/hardware/: detector.py
src/seq_llm/models/: scanner.py
src/seq_llm/safety/: token_guard.py
tests/: test_cli_manual.py  test_cli_startup.py  test_hardware_detector.py
tests/fixtures/: sample_config.yaml
tests/unit/: test_api_client_stream_chat.py  test_cli_first_run.py  test_cli_start_profile.py  test_command_builder.py  test_config.py  test_server_manager.py
