[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-llm"
version = "0.1.2"
description = "A sequence-based LLM orchestration framework"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [
    { name = "Ananay" }
]

keywords = ["llm", "orchestration", "sequence", "cli", "llama", "llama-cpp", "local-llm"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "typer[all]>=0.7.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]

[project.scripts]
seq-llm = "seq_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.urls]
Homepage = "https://github.com/Ananay28425/Sequence-LLM"
Repository = "https://github.com/Ananay28425/Sequence-LLM"
Issues = "https://github.com/Ananay28425/Sequence-LLM/issues"
